gcc/testsuite/gdc.test/fail_compilation/fail17.d
struct A(T)
{
    mixin B!(T, A!(T));
}

A!(int) x;


